# HCTOpenCV

./: .gitignore  CMakeLists.txt
include/: hct.hpp
src/: main.cpp
